--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postprocessing": "^6.37.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.179.1"
   },
   "devDependencies": {
